# mares

./: .gitignore  README.md  pyproject.toml
example/: test.py
src/mares/: __init__.py  mares.py
